Sources/SwiftMarkdownView/Resources/default-macOS.css
/* ... */
#markdown-rendered table > tbody > tr:nth-child(odd) > td {
    background-color: -apple-system-even-alternating-content-background;
}

#markdown-rendered table > tbody > tr:nth-child(even) > td {
    background-color: -apple-system-odd-alternating-content-background;
}

#markdown-rendered img[align=right] {
    padding-left: 1.25rem;
}

#markdown-rendered img[align=left] {
    padding-right: 1.25rem;
}

#markdown-rendered code,
#markdown-rendered tt {
    padding: 0.2em 0.4em;
    margin: 0;
    font-size: 90%;
    white-space: break-spaces;
    background-color: var(--background-code);
    border-radius: 0.3rem;
}

#markdown-rendered code br,
#markdown-rendered tt br {
    display: none;
}

#markdown-rendered del code {
    text-decoration: inherit;
}

#markdown-rendered samp {
    font-size: 85%;
}

#markdown-rendered pre code {
    font-size: 100%;
}

#markdown-rendered pre>code {
    padding: 0;
    margin: 0;
    word-break: normal;
    white-space: pre;
    background: transparent;
    border: 0;
}

#markdown-rendered pre code,
#markdown-rendered pre tt {
    display: inline;
    max-width: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    line-height: inherit;
    word-wrap: normal;
    background-color: transparent;
    border: 0;
}

#markdown-rendered .task-list-item {
    list-style-type: none;
}

#markdown-rendered .task-list-item label {
    font-weight: 400;
}

#markdown-rendered .task-list-item.enabled label {
    cursor: pointer;
}

#markdown-rendered .task-list-item+.task-list-item {
    margin-top: 0.25rem;
}

#markdown-rendered .task-list-item .handle {
    display: none;
}

#markdown-rendered .task-list-item-checkbox {
    margin: 0 0.2em 0.25em -1.4em;
    vertical-align: middle;
}

#markdown-rendered .contains-task-list:dir(rtl) .task-list-item-checkbox {
    margin: 0 -1.6em 0.25em 0.2em;
}

#markdown-rendered .contains-task-list {
    position: relative;
}

#markdown-rendered .contains-task-list:hover .task-list-item-convert-container,
#markdown-rendered .contains-task-list:focus-within .task-list-item-convert-container {
    display: block;
    width: auto;
    height: 1.5rem;
    overflow: visible;
    clip: auto;
}

#markdown-rendered .code-block-wrapper {
    position: relative;
}

#markdown-rendered .copy-code-button {
    background-color: rgba(0, 0, 0, 0);
    position: absolute;
    bottom: 0.2rem;
    right: 0.625rem;
    padding: 0.3125rem 0.3125rem;
    color: -apple-system-foreground;
    border: none;
    cursor: pointer;
    border-radius: 0.3125rem;
    font-size: 1.3rem;
    transition: opacity 0.2s ease-in-out;
    opacity: 0;
}

#markdown-rendered .code-block-wrapper:hover .copy-code-button {
    opacity: 1;
}

#markdown-rendered .copy-code-button.copied {
    opacity: 0;
    transition: opacity 0.2s ease-in-out;
}

#markdown-rendered .copy-code-button i {
    pointer-events: none; /* Prevents the icon from blocking click events */
}

#markdown-rendered>*:first-child {
    margin-top: 0 !important;
}

#markdown-rendered>*:last-child {
    margin-bottom: 0 !important;
}


/**
 * Minified by jsDelivr using clean-css v5.3.0.
 * Original file: /npm/markdown-it-texmath@1.0.0/css/texmath.css
 *
 * Do NOT use SRI with dynamically generated files! More information: https://www.jsdelivr.com/using-sri-with-dynamic-files
 */
.katex{font-size:1em!important}eq{display:inline-block}eqn{display:block}section.eqno{display:flex;flex-direction:row;align-content:space-between;align-items:center}section.eqno>eqn{width:100%;margin-left:3em}section.eqno>span{width:3em;text-align:right}
/* ... */

